# setup.py
@@ -18,10 +18,10 @@ REQUIRES = ["connexion"]
 setup(
     name=NAME,
     version=VERSION,
-    description="Stock Market Forecast App",
+    description="Stock price prediction service",
     author_email="",
     url="",
-    keywords=["Swagger", "Stock Market Forecast App"],
+    keywords=["Swagger", "Stock price prediction service"],
     install_requires=REQUIRES,
     packages=find_packages(),
     package_data={'': ['swagger/swagger.yaml']},
@@ -29,7 +29,7 @@ setup(
     entry_points={
         'console_scripts': ['swagger_server=swagger_server.__main__:main']},
     long_description="""\
-    No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+    Wrapper around a neural network model trained to predict stock prices
     """
 )
 
