# swagger_server/models/alpha_vantage_response.py
@@ -9,16 +9,16 @@ from swagger_server.models.base_model_ import Model
 from swagger_server import util
 
 
-class TimeseriesResponse(Model):
+class AlphaVantageResponse(Model):
     """NOTE: This class is auto generated by the swagger code generator program.
 
     Do not edit the class manually.
     """
 
     def __init__(self, message: object=None):  # noqa: E501
-        """TimeseriesResponse - a model defined in Swagger
+        """AlphaVantageResponse - a model defined in Swagger
 
-        :param message: The message of this TimeseriesResponse.  # noqa: E501
+        :param message: The message of this AlphaVantageResponse.  # noqa: E501
         :type message: object
         """
         self.swagger_types = {
@@ -32,32 +32,32 @@ class TimeseriesResponse(Model):
         self._message = message
 
     @classmethod
-    def from_dict(cls, dikt) -> 'TimeseriesResponse':
+    def from_dict(cls, dikt) -> 'AlphaVantageResponse':
         """Returns the dict as a model
 
         :param dikt: A dict.
         :type: dict
-        :return: The TimeseriesResponse of this TimeseriesResponse.  # noqa: E501
-        :rtype: TimeseriesResponse
+        :return: The AlphaVantageResponse of this AlphaVantageResponse.  # noqa: E501
+        :rtype: AlphaVantageResponse
         """
         return util.deserialize_model(dikt, cls)
 
     @property
     def message(self) -> object:
-        """Gets the message of this TimeseriesResponse.
+        """Gets the message of this AlphaVantageResponse.
 
 
-        :return: The message of this TimeseriesResponse.
+        :return: The message of this AlphaVantageResponse.
         :rtype: object
         """
         return self._message
 
     @message.setter
     def message(self, message: object):
-        """Sets the message of this TimeseriesResponse.
+        """Sets the message of this AlphaVantageResponse.
 
 
-        :param message: The message of this TimeseriesResponse.
+        :param message: The message of this AlphaVantageResponse.
         :type message: object
         """
         if message is None:
