# swagger_server/models/data_to_predict.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class DataToPredict(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, model_id: str=None, dataset_id: int=None):  # noqa: E501
+        """DataToPredict - a model defined in Swagger
+
+        :param model_id: The model_id of this DataToPredict.  # noqa: E501
+        :type model_id: str
+        :param dataset_id: The dataset_id of this DataToPredict.  # noqa: E501
+        :type dataset_id: int
+        """
+        self.swagger_types = {
+            'model_id': str,
+            'dataset_id': int
+        }
+
+        self.attribute_map = {
+            'model_id': 'model_id',
+            'dataset_id': 'datasetId'
+        }
+
+        self._model_id = model_id
+        self._dataset_id = dataset_id
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'DataToPredict':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The data_to_predict of this DataToPredict.  # noqa: E501
+        :rtype: DataToPredict
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def model_id(self) -> str:
+        """Gets the model_id of this DataToPredict.
+
+
+        :return: The model_id of this DataToPredict.
+        :rtype: str
+        """
+        return self._model_id
+
+    @model_id.setter
+    def model_id(self, model_id: str):
+        """Sets the model_id of this DataToPredict.
+
+
+        :param model_id: The model_id of this DataToPredict.
+        :type model_id: str
+        """
+
+        self._model_id = model_id
+
+    @property
+    def dataset_id(self) -> int:
+        """Gets the dataset_id of this DataToPredict.
+
+
+        :return: The dataset_id of this DataToPredict.
+        :rtype: int
+        """
+        return self._dataset_id
+
+    @dataset_id.setter
+    def dataset_id(self, dataset_id: int):
+        """Sets the dataset_id of this DataToPredict.
+
+
+        :param dataset_id: The dataset_id of this DataToPredict.
+        :type dataset_id: int
+        """
+
+        self._dataset_id = dataset_id
